fixed some text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if (mission === true)
   {
     alert ("Excellent your training begins now.");
   }else{
-    alert ("Well too bad your going any ways.");
+    alert ("Very well may your life be long and prosperous.");
   }
 //the begining of the game
 var begining;
