--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ if (mission === true)
     alert ("Excellent your training begins now.");
   }else{
     alert ("Very well may your life be long and prosperous.");
+    console.log("You never left your home and died a humble farmer.");
+    break;
   }
 //the begining of the game
 var begining;
