--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			body {
 				background-color:black;
 				color:red;
-				font-family: 'Josefin Sans', sans-serif;
+				font-family: 'Impact', sans-serif;
 			}
 		</style>
 </head>
